WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
15988
REGRESSION: XPath preceding-axis query misses nested elements
https://bugs.webkit.org/show_bug.cgi?id=15988
Summary
REGRESSION: XPath preceding-axis query misses nested elements
Khoo Yit Phang
Reported
2007-11-14 12:17:27 PST
In the nightlies (but not Safari 3.0.3 for Tiger), when performing an XPath query with a preceding axis, some nodes which do precede the context node are not returned. It seems to occur when these missed nodes are nested in another node. E.g.: <div id="test"> <span id="A"/> <div><span id="B"> <span id="C"/> </span></div> <span id="D"/> </div> The query "preceding::xhtml:span" on span#D will not return span#C.
Attachments
Test case in XHTML and inline Javascript.
(1.63 KB, application/xhtml+xml)
2007-11-14 12:18 PST
,
Khoo Yit Phang
no flags
Details
Equivalent query in XSLT, to be applied to the test XHTML file.
(692 bytes, application/xml)
2007-11-14 12:21 PST
,
Khoo Yit Phang
no flags
Details
proposed fix
(5.37 KB, patch)
2007-11-15 08:43 PST
,
Alexey Proskuryakov
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Khoo Yit Phang
Comment 1
2007-11-14 12:18:30 PST
Created
attachment 17274
[details]
Test case in XHTML and inline Javascript.
Khoo Yit Phang
Comment 2
2007-11-14 12:21:54 PST
Created
attachment 17275
[details]
Equivalent query in XSLT, to be applied to the test XHTML file.
Alexey Proskuryakov
Comment 3
2007-11-15 06:41:17 PST
I probably broke it when fixing
bug 15436
.
Alexey Proskuryakov
Comment 4
2007-11-15 08:43:03 PST
Created
attachment 17294
[details]
proposed fix
Darin Adler
Comment 5
2007-11-15 09:37:51 PST
Comment on
attachment 17294
[details]
proposed fix r=me I love test cases!
Alexey Proskuryakov
Comment 6
2007-11-15 22:01:17 PST
Committed revision 27835.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug