        Reviewed by Darin.

http://bugs.webkit.org/show_bug.cgi?id=15988
        REGRESSION: XPath preceding-axis query misses nested elements

        Test: fast/xpath/preceding-axis.xhtml

        * xml/XPathStep.cpp:
        (WebCore::XPath::Step::nodesInAxis): Hopefully correct this time.



Canonical link: https://commits.webkit.org/21755@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@27835 268f45cc-cd09-0410-ab3c-d52691b4dbfc